--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -5,6 +5,7 @@
   .message {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: hsl(180 37% 18% / 1);
     padding: 1em;
     border: 2px solid hsl(180 3% 9% / 1);
